# invertmeeg

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  changelog.md  dashboard.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  benchmarks.md  getting-started.md  index.md  license.md
docs/assets/javascripts/: benchmarks.js  solver-id-copy.js
docs/assets/stylesheets/: extra.css
docs/modules/: benchmark.md  evaluate.md  forward.md  index.md  simulate.md  viz.md
docs/scripts/: gen_benchmarks_assets.py  gen_solver_catalog.py
invert/: __init__.py  __main__.py  config.py  invert.py  solver_registry.py
invert/adapters/: __init__.py  context_lstm.py  focuss.py  stamp.py
invert/auto_inverse/: __init__.py  auto_inverse.py  example_usage.py
invert/benchmark/: __init__.py  datasets.py  runner.py  visualize.py
invert/cmaps/: __init__.py  cmaps.py
invert/denoising/: ASR.py  lgsp.py
invert/ensemble/: ensemble.py
invert/evaluate/: README.md  __init__.py  evaluate.py  evaluation.py  example_evaluation.py
invert/forward/: forward.py
invert/parcellation/: Parcellator.py  __init__.py
invert/simulate/: __init__.py  config.py  covariance.py  noise.py  simulate.py  spatial.py
invert/solvers/: __init__.py  base.py  random_noise.py
invert/solvers/bayesian/: __init__.py  bcs.py  champagne.py  cmem.py  flex_champagne.py  flex_nl_champagne.py  gamma_map.py  gamma_map_msp.py  msp.py  nl_champagne.py  omni_champagne.py  source_map.py  source_map_msp.py  subspace_sbl.py  vb_sbl.py
invert/solvers/beamformers/: __init__.py  adapt_flex_esmv.py  deblur_flex_esmv.py  dics.py  ebb.py  esmv.py  esmv2.py  esmv3.py  flex_esmv.py  flex_esmv2.py  hocmcmv.py  hocmv.py  iresmv.py  lcmv.py  lcmv_mvpure.py  mcmv.py  mvab.py  recipsiicos_plain.py  recipsiicos_whitened.py  safe_flex_esmv.py  sam.py  sharp_flex_esmv.py  sharp_flex_esmv2.py  smv.py  ssp_esmv.py  ssp_iresmv.py  unit_noise_gain.py  utils.py  wnmv.py
invert/solvers/dipoles/: __init__.py  ecd.py  sesame.py
invert/solvers/hybrids/: __init__.py  apse.py  chimera.py
invert/solvers/matching_pursuit/: __init__.py  cosamp.py  isubsmp.py  omp.py  rembo.py  smp.py  somp.py  sp.py  ssmp.py  ssp.py  subsmp.py
invert/solvers/minimum_norm/: __init__.py  backus_gilbert.py  basis_functions.py  dspm.py  (+17 more)
invert/util/: __init__.py  util.py
invert/viz/: __init__.py  glass_brain.py  glass_brain_3d.py  surface.py
results/release/: leaderboard.json
scripts/: bench.py  eval_all-claude.py  eval_all-gpt.py  eval_all-lowsnr.py  eval_all-music.py  eval_all.py  eval_all_release.py  plot_source_estimates.py
scripts/old/: eval_all.py
tests/: conftest.py  test_adapters.py  test_context_lstm_utils.py  test_exso_music.py  test_math.py  test_regularization_scaling.py  test_simulate.py  test_solver_math.py  test_solvers.py
tutorials/: brainstorm_auditory.ipynb  getting_started.ipynb
(+18 files in other folders)
